[package]
name = "bloom_lfs"
version = "0.1.1"
edition = "2021"
description = "A high-performance, latch-free log-structured storage layer built for modern flash storage and multi-core systems."
license = "GPL-3.0"
repository = "https://github.com/BloomDb-Labs/Bloom_lfs"
homepage = "https://github.com/BloomDb-Labs/Bloom_lfs"
documentation = "https://docs.rs/bloom_lfs"


exclude = ["benches/", "doc/", "loom-tests/", "test_store/"]

[dependencies]
io-uring = "0.7.11"
bytes = "1.11.1"

libc = "0.2"
parking_lot = "0.12.5"
loom = { version = "0.7", features = ["checkpoint"], optional = true }

[dev-dependencies]
criterion = { version = "0.5" }
divan = "0.1.21"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.profiling]
inherits = "release"
debug = true


[features]
loom = ["dep:loom"]

[[bench]]
name = "flush_buffer"
harness = false